--- a/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -7,20 +7,24 @@
 
 .section {
     width: 600px;
-    height: 912px;
+    max-height: 912px;
     background-color: inherit;
+}
+
+.scrollbarContainer {
+    height: 716px;
     overflow-y: scroll;
 }
 
-.section::-webkit-scrollbar {
+.scrollbarContainer::-webkit-scrollbar {
     width: 8px;
 }
 
-.section::-webkit-scrollbar-track {
+.scrollbarContainer::-webkit-scrollbar-track {
     background: #2f2f37;
 }
 
-.section::-webkit-scrollbar-thumb {
+.scrollbarContainer::-webkit-scrollbar-thumb {
     background-color: #8585ad;
 }
 
